# NaturalMouseSensitivity

./: README.md  main.py  pyproject.toml
source/: aliases.py
source/calibrator/: controller.py  frametime.py  game.py  mouse.py  runner.py
source/common/: utils.py
source/controller/: event_bus.py  mouse.py  orchestrator.py  thread_helpers.py
source/launcher/: launcher.py
source/model/: coordinates.py  core.py  target_positioning.py  target_spawner.py
source/result_processor/: result_screen.py
source/view/: calibration_screen.py  main_window.py  play_screen.py  qt_utils.py  result_screen.py  settings_screen.py  start_screen.py
tests/: test_core.py
