[tool.poetry]
name = "naturalmousesensitivity"
version = "0.1.0"
description = ""
authors = ["Ilya Tumanov <persikabricos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyqt6 = "^6.5.0"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
